--- a/front/.storybook/preview-head.html
+++ b/front/.storybook/preview-head.html
@@ -16,4 +16,17 @@ html {
 .sbdocs-wrapper {
   padding: 0 !important;
 }
+*::-webkit-scrollbar {
+    height: 4px;
+    width: 4px;
+  }
+
+  *::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border-radius: 2px;
+  }
 </style>
