--- a/front/public/index.html
+++ b/front/public/index.html
@@ -36,6 +36,7 @@
     />
 
     <title>Twenty</title>
+    <script src="%PUBLIC_URL%/env-config.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
