Remove env-config.js (#9331)
Fixes #5340 which had been open for a long time

--- a/packages/twenty-front/index.html
+++ b/packages/twenty-front/index.html
@@ -28,7 +28,13 @@
     />
 
     <title>Twenty</title>
-    <script src="/env-config.js"></script>
+    <!-- BEGIN: Twenty Config -->
+    <script id="twenty-env-config">
+      window._env_ = {
+        // This will be overwritten
+      };
+    </script>
+    <!-- END: Twenty Config -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module">
